// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`infiniteHits() calls twice ReactDOM.render(<Hits props />, container) 1`] = `
<InfiniteHits
  cssClasses={
    Object {
      "disabledLoadMore": "ais-InfiniteHits-loadMore--disabled",
      "emptyRoot": "ais-InfiniteHits--empty",
      "item": "ais-InfiniteHits-item",
      "list": "ais-InfiniteHits-list",
      "loadMore": "ais-InfiniteHits-loadMore",
      "root": "ais-InfiniteHits root cx",
    }
  }
  hits={
    Array [
      Object {
        "first": "hit",
        "second": "hit",
      },
    ]
  }
  isLastPage={false}
  loadMoreLabel="Show more results"
  results={
    Object {
      "hits": Array [
        Object {
          "first": "hit",
          "second": "hit",
        },
      ],
    }
  }
  showMore={[Function]}
  templateProps={
    Object {
      "templates": Object {
        "empty": "No results",
        "item": [Function],
      },
      "templatesConfig": undefined,
      "useCustomCompileOptions": Object {
        "empty": false,
        "item": false,
      },
    }
  }
/>
`;

exports[`infiniteHits() calls twice ReactDOM.render(<Hits props />, container) 2`] = `
<InfiniteHits
  cssClasses={
    Object {
      "disabledLoadMore": "ais-InfiniteHits-loadMore--disabled",
      "emptyRoot": "ais-InfiniteHits--empty",
      "item": "ais-InfiniteHits-item",
      "list": "ais-InfiniteHits-list",
      "loadMore": "ais-InfiniteHits-loadMore",
      "root": "ais-InfiniteHits root cx",
    }
  }
  hits={
    Array [
      Object {
        "first": "hit",
        "second": "hit",
      },
    ]
  }
  isLastPage={false}
  loadMoreLabel="Show more results"
  results={
    Object {
      "hits": Array [
        Object {
          "first": "hit",
          "second": "hit",
        },
      ],
    }
  }
  showMore={[Function]}
  templateProps={
    Object {
      "templates": Object {
        "empty": "No results",
        "item": [Function],
      },
      "templatesConfig": undefined,
      "useCustomCompileOptions": Object {
        "empty": false,
        "item": false,
      },
    }
  }
/>
`;

exports[`infiniteHits() if it is the last page, then the props should contain isLastPage true 1`] = `
<InfiniteHits
  cssClasses={
    Object {
      "disabledLoadMore": "ais-InfiniteHits-loadMore--disabled",
      "emptyRoot": "ais-InfiniteHits--empty",
      "item": "ais-InfiniteHits-item",
      "list": "ais-InfiniteHits-list",
      "loadMore": "ais-InfiniteHits-loadMore",
      "root": "ais-InfiniteHits root cx",
    }
  }
  hits={
    Array [
      Object {
        "first": "hit",
        "second": "hit",
      },
    ]
  }
  isLastPage={false}
  loadMoreLabel="Show more results"
  results={
    Object {
      "hits": Array [
        Object {
          "first": "hit",
          "second": "hit",
        },
      ],
      "nbPages": 2,
      "page": 0,
    }
  }
  showMore={[Function]}
  templateProps={
    Object {
      "templates": Object {
        "empty": "No results",
        "item": [Function],
      },
      "templatesConfig": undefined,
      "useCustomCompileOptions": Object {
        "empty": false,
        "item": false,
      },
    }
  }
/>
`;

exports[`infiniteHits() if it is the last page, then the props should contain isLastPage true 2`] = `
<InfiniteHits
  cssClasses={
    Object {
      "disabledLoadMore": "ais-InfiniteHits-loadMore--disabled",
      "emptyRoot": "ais-InfiniteHits--empty",
      "item": "ais-InfiniteHits-item",
      "list": "ais-InfiniteHits-list",
      "loadMore": "ais-InfiniteHits-loadMore",
      "root": "ais-InfiniteHits root cx",
    }
  }
  hits={
    Array [
      Object {
        "first": "hit",
        "second": "hit",
      },
    ]
  }
  isLastPage={true}
  loadMoreLabel="Show more results"
  results={
    Object {
      "hits": Array [
        Object {
          "first": "hit",
          "second": "hit",
        },
      ],
      "nbPages": 2,
      "page": 1,
    }
  }
  showMore={[Function]}
  templateProps={
    Object {
      "templates": Object {
        "empty": "No results",
        "item": [Function],
      },
      "templatesConfig": undefined,
      "useCustomCompileOptions": Object {
        "empty": false,
        "item": false,
      },
    }
  }
/>
`;

exports[`infiniteHits() renders transformed items 1`] = `
<InfiniteHits
  cssClasses={
    Object {
      "disabledLoadMore": "ais-InfiniteHits-loadMore--disabled",
      "emptyRoot": "ais-InfiniteHits--empty",
      "item": "ais-InfiniteHits-item",
      "list": "ais-InfiniteHits-list",
      "loadMore": "ais-InfiniteHits-loadMore",
      "root": "ais-InfiniteHits",
    }
  }
  hits={
    Array [
      Object {
        "first": "hit",
        "second": "hit",
        "transformed": true,
      },
    ]
  }
  isLastPage={false}
  loadMoreLabel="Show more results"
  results={
    Object {
      "hits": Array [
        Object {
          "first": "hit",
          "second": "hit",
          "transformed": true,
        },
      ],
    }
  }
  showMore={[Function]}
  templateProps={
    Object {
      "templates": Object {
        "empty": "No results",
        "item": [Function],
      },
      "templatesConfig": undefined,
      "useCustomCompileOptions": Object {
        "empty": false,
        "item": false,
      },
    }
  }
/>
`;
